Changed hover color to gold; Updated alignment for non-index pages (fixed weird alignment issues);

--- a/css/multiColumnTemplate.css
+++ b/css/multiColumnTemplate.css
@@ -159,7 +159,7 @@ a:visited {
 }
 
 .secondary_header ul li:hover a{
-	color: #2C9AB7;
+	color: #ffae4b;
 	cursor: pointer;
 }
 
